Fix performance: CLS prevention, skeleton loader, navbar/hero height reservations, contain:layout

--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -6,6 +6,8 @@
     position: relative;
     overflow: hidden;
     padding-top: 100px;
+    /* Performance optimizations */
+    contain: layout style;
 }
 
 .hero-bg {
