--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -215,6 +215,7 @@
         justify-content: center;
         position: absolute;
         right: var(--spacing-md);
+        margin-top: -20px;
     }
 }
 
