Keep negative bottom margin on logo when scrolled
- Maintain -30px bottom margin on logo image when navbar is scrolled
- Prevents logo from extending below navbar boundary
- Only reset top margin to 0 when scrolled

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -168,7 +168,7 @@
 
     .navbar-scrolled .logo-image {
         margin-top: 0;
-        margin-bottom: 0;
+        margin-bottom: -30px;
     }
 
     .navbar-scrolled .navbar-mobile-toggle {
